# lis

./: Cargo.toml  LEIAME.md  LICENSE  README.md  ToDo.md  install.sh
.github/: FUNDING.yml
Scripts/: Installation.sh
Scripts/.AutoCompletions/zsh/: _lis
auto-complete/: _lis  _list
src/: arguments.rs  color.rs  main.rs  print.rs  printer.rs  terminal_info.rs
src/lib/: color.rs
src/lib/entries/: formating.rs  metadata.rs  types.rs
