[package]
name = "lis"
version = "0.2.2"
authors = ["Arthur Manske"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.142"

[profile.release]
opt-level = 3
lto = "fat"

[[bin]]
name = "list"
path = "src/main.rs"

[install]
prefix = "/usr/local" # dir to install manually
bindir = "bin"
